=======
CHANGES
=======

Version 2.0.0 (2008-??-??)
--------------------------

- Feature: Allow raw request values of sequence widgets to be non-sequence
  values, which makes integration with Javascript libraries easier.

- Feature: Added support in the file upload widget's testing flavor to specify
  'base64'-encoded strings in the hidden text area, so that binary data can be
  uploaded as well.

- Feature: Allow overriding the "required" widget attribute using IValue adapter
  just like it's done for "label" and "name" attributes.

- Refactoring: Use the ``z3c.pt.compat`` template engine compatibility
  layer.

- Feature: Added benchmarking suite demonstrating performance gain
  when using ``z3c.pt``.

- Feature: Added support for ``z3c.pt``. Usage is switched on via the
  "PREFER_Z3C_PT" environment variable.

- Refactoring: Templates now declare XML namespaces.

- Refactoring: HTML output is now compared using a modified version of
  the XML-aware output checker provided by ``lxml``.

- Feature: The `SequenceDataConverter` and `CollectionSequenceDataConverter`
  converter classes now ignore values that are not present in the terms when
  converting to a widget value.

- Feature: Add support for internationalization of z3c.form's messages.
  Added Russian, French, German and Chinese translations.

- Feature: The `TypeError` message used when a field does not provide
  ``IFormUnicode`` now also contains the type of the field.

- Feature: Implemented the `MultiWidget` widget. This widget allows to use
  simple fields like `ITextLine`, `IInt`, `IPassword`, etc. in a `IList` or
  `ITuple` sequence.

- Feature: Implemented `TextLinesWidget` widget. This widget offers a text
  area element and splits lines in sequence items. This is usfull for power
  user interfaces.  The widget can be used for sequence fields (e.g. `IList`)
  that specify a simple value type field (e.g. `ITextLine` or `IInt`).
