@@ -66,7 +66,8 @@ class Field(object):
 
     widgetFactory = WidgetFactoryProperty()
 
-    def __init__(self, field, name=None, prefix='', mode=None, interface=None):
+    def __init__(self, field, name=None, prefix='', mode=None, interface=None,
+                 ignoreContext=None):
         self.field = field
         if name is None:
             name = field.__name__
@@ -77,6 +78,7 @@ class Field(object):
         if interface is None:
             interface = field.interface
         self.interface = interface
+        self.ignoreContext = ignoreContext
 
     def __repr__(self):
         return '<%s %r>' % (self.__class__.__name__, self.__name__)
@@ -221,13 +223,17 @@ class FieldWidgets(util.Manager):
         prefix += util.expandPrefix(self.prefix)
         # Walk through each field, making a widget out of it.
         for field in self.form.fields.values():
+            # Step 0. Determine whether the context should be ignored.
+            ignoreContext = self.ignoreContext
+            if field.ignoreContext is not None:
+                ignoreContext = field.ignoreContext
             # Step 1: Determine the mode of the widget.
             mode = self.mode
             if field.mode is not None:
                 mode = field.mode
             elif field.field.readonly and not self.ignoreReadonly:
                     mode = interfaces.DISPLAY_MODE
-            elif not self.ignoreContext:
+            elif not ignoreContext:
                 # If we do not have enough permissions to write to the
                 # attribute, then switch to display mode.
                 dm = zope.component.getMultiAdapter(
@@ -249,12 +255,12 @@ class FieldWidgets(util.Manager):
             widget.context = self.content
             # Step 5: Set the form
             widget.form = self.form
-            # Optimization: set both interfaces here, rather in step 4 and 5: alsoProvides is quite slow
-            zope.interface.alsoProvides(widget,
-                                        interfaces.IContextAware,
-                                        interfaces.IFormAware)
+            # Optimization: set both interfaces here, rather in step 4 and 5:
+            # alsoProvides is quite slow
+            zope.interface.alsoProvides(
+                widget, interfaces.IContextAware, interfaces.IFormAware)
             # Step 6: Set some variables
-            widget.ignoreContext = self.ignoreContext
+            widget.ignoreContext = ignoreContext
             widget.ignoreRequest = self.ignoreRequest
             # Step 7: Set the mode of the widget
             widget.mode = mode
